# voiceflow

./: .gitignore  AI_FEATURES_ROADMAP.md  COLD_START_OPTIONS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY_FIX_PLAN.md  PERFORMANCE_SCOPE.md  README.md  RELEASE_NOTES.md
.era/: governance.yaml
VoiceFlowApp/: Package.resolved  Package.swift  build.sh  create-dmg.sh
VoiceFlowApp/.build/: build.db  debug.yaml  plugin-tools.yaml  release.yaml
VoiceFlowApp/.build/arm64-apple-macosx/debug/: description.json
VoiceFlowApp/.build/arm64-apple-macosx/debug/ModuleCache/2M3PIGEENVEKW/: AVFAudio-39GWG3RU9NW3K.pcm  Accessibility-1QAKY5K5DK53K.pcm  ApplicationServices-1I9NBCLIZ367E.pcm  AudioToolbox-14XOC8XD3T9WF.pcm  CFNetwork-29OTENZX4H6ZX.pcm  CUPS-2AWZRWXUEKVLD.pcm  Carbon-3HKV1EPM4I1ZA.pcm  ColorSync-MRFMM3WVIGRT.pcm  CoreAudio-3LNCOJ9TEWO27.pcm  CoreAudioTypes-2SH6XF2S94S78.pcm  CoreData-2WQ9I0RR95W5Z.pcm  CoreFoundation-WZS10HFDL3DN.pcm  CoreGraphics-326PJ40JLQC1K.pcm  CoreImage-2NWCQHA486RAK.pcm  CoreMIDI-12FXN26XZR44Q.pcm  CoreMedia-3AYBLB6TUCVDK.pcm  CoreText-17TD9RIY1C59K.pcm  CoreTransferable-4NYL9A4KWZSF.pcm  CoreVideo-3E798VSGRXHBG.pcm  DataDetection-DA1D8KHGEUQJ.pcm  DeveloperToolsSupport-4GH5ZBUE0NB8.pcm  DiskArbitration-2WAW2PWGKF191.pcm  Dispatch-23FBXVIUKFUX.pcm  IOSurface-3JDIC0R97353U.pcm  ImageIO-1R4JQWJZ6SMA6.pcm  MachO-3H9Z9UDVFLYEY.pcm  MediaToolbox-I73UGEWMRSMW.pcm  Metal-1KKHP7V8HSS06.pcm  OSLog-XMV44JZEV304.pcm  ObjectiveC-2H9LOZ7BIB4U4.pcm  OpenGL-1A5SAYVW5ETWB.pcm  QuartzCore-J5VUYIWAHHB1.pcm  Security-34QE2EJOQQTTR.pcm  Spatial-BLEN8XAU3270.pcm  SwiftShims-UTLVU43OQQS4.pcm  SwiftUI-2MOGCVF27ZP4S.pcm  SwiftUICore-QKUM6ISPTDXH.pcm  Symbols-1WP56SUO151ZA.pcm  UniformTypeIdentifiers-2U44WTE3QEWE.pcm  XPC-1Z8H8VL0DL907.pcm  (+25 more)
VoiceFlowApp/.build/arm64-apple-macosx/debug/ModuleCache/NJ2WM8X0LNE5/: ApplicationServices-1I9NBCLIZ367E.pcm  CFNetwork-29OTENZX4H6ZX.pcm  CUPS-2AWZRWXUEKVLD.pcm  ColorSync-MRFMM3WVIGRT.pcm  CoreAudio-3LNCOJ9TEWO27.pcm  CoreAudioTypes-2SH6XF2S94S78.pcm  CoreFoundation-WZS10HFDL3DN.pcm  CoreGraphics-326PJ40JLQC1K.pcm  CoreMedia-3AYBLB6TUCVDK.pcm  CoreText-17TD9RIY1C59K.pcm  CoreTransferable-4NYL9A4KWZSF.pcm  CoreVideo-3E798VSGRXHBG.pcm  DataDetection-DA1D8KHGEUQJ.pcm  DiskArbitration-2WAW2PWGKF191.pcm  Dispatch-23FBXVIUKFUX.pcm  IOSurface-3JDIC0R97353U.pcm  ImageIO-1R4JQWJZ6SMA6.pcm  MachO-3H9Z9UDVFLYEY.pcm  XPC-1Z8H8VL0DL907.pcm  (+31 more)
VoiceFlowApp/.build/arm64-apple-macosx/debug/Modules/: VoiceFlowApp.swiftdoc  VoiceFlowApp.swiftmodule  VoiceFlowApp.swiftsourceinfo
VoiceFlowApp/.build/arm64-apple-macosx/debug/VoiceFlowApp.build/: AudioRecorder.d  AudioRecorder.swiftdeps  VoiceFlowApp.d  VoiceFlowApp.emit-module.d  VoiceFlowApp.swiftdeps  VoiceFlowBridge.d  VoiceFlowBridge.dia  VoiceFlowBridge.swiftdeps  master.priors  output-file-map.json
VoiceFlowApp/.build/arm64-apple-macosx/debug/VoiceFlowApp.product/: Objects.LinkFileList
VoiceFlowApp/.build/arm64-apple-macosx/release/: VoiceFlowApp  description.json  plugin-tools-description.json
VoiceFlowApp/.build/arm64-apple-macosx/release/Modules/: VoiceFlowApp.swiftdoc  VoiceFlowApp.swiftmodule  VoiceFlowApp.swiftsourceinfo
VoiceFlowApp/.build/arm64-apple-macosx/release/VoiceFlowApp.build/: VoiceFlowApp.d  VoiceFlowApp.dia  output-file-map.json  sources
VoiceFlowApp/.build/arm64-apple-macosx/release/VoiceFlowApp.product/: Objects.LinkFileList
VoiceFlowApp/.build/index-build/: build.db  debug.yaml
VoiceFlowApp/.build/index-build/arm64-apple-macosx/debug/: description.json
VoiceFlowApp/Sources/VoiceFlowApp/: AIFeatureTypes.swift  AudioDevices.swift  AudioGain.swift  AudioRecorder.swift  BrowserContext.swift  FieldContext.swift  HotkeySettings.swift  LlamaServerManager.swift  LogConsole.swift  MoonshineStreamingEngine.swift  ParakeetASREngine.swift  ParakeetStreamingEngine.swift  PersonaClassifier.swift  QuickTips.swift  Qwen3ASREngine.swift  RetroactiveCorrection.swift  ScreenVocabExtractor.swift  ScreenshotCapture.swift  ServiceMonitor.swift  SetupHelper.swift  SetupWizardController.swift  SetupWizardView.swift  ShadowBuffer.swift  SuggestionManager.swift  UpdateManager.swift  VisionOCR.swift  VoiceFlowApp.swift  VoiceFlowBridge.swift
VoiceFlowApp/Sources/VoiceFlowFFI/: module.modulemap  voiceflow.h
VoiceFlowApp/Tests/: test_ai_commands.swift  test_spacing_and_form_fields.swift
crates/voiceflow-cli/: Cargo.toml
crates/voiceflow-cli/src/: main.rs
crates/voiceflow-cli/src/commands/: bench.rs  config.rs  eval.rs  file.rs  mod.rs  models.rs  record.rs  setup.rs
crates/voiceflow-core/: Cargo.toml
crates/voiceflow-core/examples/: eval_context.rs  test_fix.rs  test_qwen35.rs
crates/voiceflow-core/src/: config.rs  lib.rs  pipeline.rs  runtime.rs
crates/voiceflow-core/src/audio/: capture.rs  mod.rs  resample.rs
crates/voiceflow-core/src/context/: detector.rs  mod.rs
crates/voiceflow-core/src/llm/: backend.rs  engine.rs  llamacpp_backend.rs  mistralrs_backend.rs  mod.rs  numbers.rs  openai_server_backend.rs  prompts.rs  structured_edit.rs
crates/voiceflow-core/src/prosody/: filler_words.rs  mod.rs  pause_analysis.rs  pitch_analysis.rs  replacements.rs  spelled_words.rs  tokenization_fix.rs  voice_commands.rs
crates/voiceflow-core/src/text_normalize/: correction_commands.rs  intent_classifier.rs  mod.rs  stammer_dedup.rs
crates/voiceflow-core/src/transcribe/: mod.rs  moonshine.rs  whisper.rs
crates/voiceflow-core/tests/: llm_smoke.rs
crates/voiceflow-ffi/: Cargo.toml
crates/voiceflow-ffi/include/: voiceflow.h
crates/voiceflow-ffi/src/: lib.rs
docs/: EVALUATION_PLAN.md  IMPLEMENTATION_PLAN.md  MOONSHINE_TIMESTAMPS_SCOPE.md  PROMPT_CACHING_SCOPE.md
prompts/: ai_command.txt  audio_direct.txt  code.txt  default.txt  default_original.txt  default_v2.txt  email.txt  redo_or_append.txt  replacements.toml  retroactive_correction.txt  slack.txt  summarize.txt  translate.txt
scripts/: build-parakeet-daemon.sh  download-models.sh  eval_vlm_text.py  parakeet_asr_daemon.py  qwen3_asr_daemon.py  test_vlm_inference.py
scripts/dev/: clean-uninstall.sh
site/: index.html
(+807 files in other folders)
