[package]
name = "voiceflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for VoiceFlow - audio capture, transcription, and LLM formatting"

[dependencies]
# Audio
cpal.workspace = true
hound.workspace = true
rubato.workspace = true
pitch-detection.workspace = true

# Speech-to-Text
whisper-rs.workspace = true
ort.workspace = true
ndarray.workspace = true
serde_json.workspace = true

# LLM - Multiple backends for architecture support
mistralrs.workspace = true
llama-cpp-2.workspace = true

# Async
tokio.workspace = true
once_cell = "1.19"

# Utils
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true

[features]
default = ["metal"]
metal = ["whisper-rs/metal", "mistralrs/metal"]
cuda = ["whisper-rs/cuda", "mistralrs/cuda"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
