[package]
name = "voiceflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for VoiceFlow - audio capture, transcription, and LLM formatting"

[dependencies]
# Audio
cpal.workspace = true
hound.workspace = true
rubato.workspace = true
pitch-detection.workspace = true

# Speech-to-Text (whisper-rs is optional to avoid GGML symbol conflicts with llama-cpp-2)
whisper-rs = { workspace = true, optional = true }
ort.workspace = true
ndarray.workspace = true
serde_json.workspace = true

# LLM - llama.cpp backend with multimodal support
llama-cpp-2.workspace = true

# Async
tokio.workspace = true
once_cell = "1.19"

# Utils
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true

[features]
default = ["metal"]
whisper = ["dep:whisper-rs"]
metal = ["whisper-rs?/metal"]
cuda = ["whisper-rs?/cuda"]
