[package]
name = "voiceflow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "C FFI bindings for VoiceFlow - for Swift/macOS app integration"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
voiceflow-core.workspace = true
tokio.workspace = true
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.27"

[features]
default = ["metal"]
metal = ["voiceflow-core/metal"]
cuda = ["voiceflow-core/cuda"]
